# chess

./: .clang-format  .gitignore  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessMain.cpp  Makefile  README.md  board.cpp  board.hpp  class_design.md  piece.cpp  piece.hpp  player.cpp  player.hpp  standard.pos  test.cpp  util.cpp  util.hpp
Tests/: ChessTests.cpp
Tests/chessBoardConfig/: bishop.pos  inCheck2.pos  testRook.pos
chessBoardConfig/: castle.pos  checkmate.pos  inCheck.pos  inCheck2.pos  onlyking.pos  pawn.pos  queen.pos  standard.pos
